Minor fix